# market-broker-api

./: .env  .gitignore  1_README.md  Dockerfile  README.md  alembic.ini  env.template  pyproject.toml  requirements.txt
__test__/: test.py
alembic/: env.py
alembic/versions/: eb152e0ce217_create_account_table.py
app/: main.py
app/api/member/: auth_kakao.py  auth_kis.py
app/clients/: kis_client.py
app/crud/: accounts.py
app/decorators/: transaction_decorators.py
app/dto/: base.py  inquire_balance.py
app/exceptions/: kis_exception.py  kis_response_handler.py
app/models/: __init__.py  account.py
app/routers/: __init__.py  accounts.py
app/routers/member/: auth.py
app/services/: auth_service.py
core/: __init__.py  cache.py  config_manager.py  db_manager.py  deps.py  exception.py  number_utils.py  rest_client.py  settings.py  test_number_utils.py  test_rest_client.py
domain/account/: __init__.py  account_balance_factory.py  account_balance_service.py
domain/account/constants/: __init__.py  account_provider.py
domain/account/models/: __init__.py  account_balance.py
domain/kis/: __init__.py  kis_account_balance_service.py  kis_account_rest.py  kis_auth_rest.py  kis_exception.py  kis_rest.py  kis_websocket_client.py  test_kis_account_balance_service.py  test_kis_account_rest.py  test_kis_auth_rest.py  test_kis_rest.py
domain/kis/dto/: __init__.py  approval.py  tokenp.py  websocket.py
producer/: dispatcher.py  main.py
producer/models/: __init__.py  realtime_account.py
sample/: main.py
sample/api/member/: auth_kakao.py  auth_kis.py
