[tool.poetry]
name = "market-broker-api"
version = "0.1.0"
description = ""
authors = ["corn <dalcon10280@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
aiohttp = "^3.10.5"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"