[tool.poetry]
name = "market-broker-api"
version = "0.1.0"
description = ""
authors = ["corn <dalcon10280@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
aiohttp = "^3.10.5"
pydantic-settings = "^2.4.0"
common = {git = "https://github.com/ether-trading-system/common.git"}
requests = "^2.32.3"
jwt = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-env = "^1.1.3"

[tool.pytest_env]
ENV = "test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"